--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
-scikit-learn>=0.18
-matplotlib>=1.4.3
-pandas>=0.19
+matplotlib==3.3.1
+numpy==1.19.1
+pandas==1.1.0
+Pillow==7.2.0
+scikit-image==0.17.2
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.10.1
+streamlit==0.65.2
+urllib3==1.25.10
+joblib
