--- a/requirements.txt
+++ b/requirements.txt
@@ -24,29 +24,12 @@ entrypoints==0.3
 enum-compat==0.0.3
 Flask==1.1.2
 Flask-Cors==3.0.8
-gast==0.3.3
-google-auth==1.20.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.31.0
-h5py==2.10.0
-idna==2.10
-imageio==2.9.0
-importlib-metadata==1.7.0
-ipykernel==5.3.4
-ipython==7.17.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
 jmespath==0.10.0
 joblib==0.16.0
 jsonschema==3.2.0
-jupyter-client==6.1.6
-jupyter-core==4.6.3
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 lime==0.2.0.1
 Markdown==3.2.2
@@ -92,14 +75,8 @@ s3transfer==0.3.3
 scikit-image==0.17.2
 scikit-learn==0.23.2
 scipy==1.4.1
-seaborn==0.10.1
-Send2Trash==1.5.0
 six==1.15.0
 streamlit==0.65.2
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.0
-tensorflow-estimator==2.3.0
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
@@ -120,3 +97,4 @@ Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
 zipp==3.1.0
+gunicorn
